Credit limit and Default - the relationship

--- a/Inferential statistics Capstone1.ipynb
+++ b/Inferential statistics Capstone1.ipynb
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A very interesting observation: With the use of replicates method, it is evident that there is credit limit and default payment next month. If credit limit increases default reduces."
+    "A very interesting observation: With the use of replicates method, it is evident that there is correlation between credit limit and default payment next month. If credit limit increases default reduces."
    ]
   },
   {
@@ -574,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With p value being zero we can conclude that credit limit and default are independent of each other. But. there is little bit of negative correlation between the two. In other words, higher the credit limit, lower is the chance of default."
+    "With p value being zero, in this method we can conclude that credit limit and default are independent of each other. But. there is little bit of negative correlation between the two. In other words, higher the credit limit, lower is the chance of default. There is a little bit of contradiction between this method and replicates method."
    ]
   },
   {
